feat: Completed the back-end and front-end
Added screens (recipe, scan) on the front-end
Tweaked some screens to improve the UX
Added back-end routes to handle image uploads to azure and data uploads to mongodb
Trained a new model using Google Colab resources
Added new GPT-4.1 function to generate recipes when you click on a button in the scan screen.
